--- a/views/directory.html
+++ b/views/directory.html
@@ -1,4 +1,5 @@
 <div class="content">
+  <div ng-controller="NinjaController">
     <button ng-click="order = 'name'">Order by Name</button>
     <button ng-click="order = 'belt'">Order by Belt</button>
     <input type="text" ng-model="search" placeholder="Search for a ninja">
@@ -19,4 +20,5 @@
       <input type="text" placeholder="rate" ng-model="newNinja.rate" />
       <input type="submit" value="Add new ninja" />
     </form>
+  </div>
 </div>
