--- a/css/main.css
+++ b/css/main.css
@@ -84,17 +84,38 @@ body {
           background-color: #6698d2; }
 
 .content {
-  width: 90vw;
-  margin: 4rem auto; }
+  width: 90%;
+  margin: 4rem auto;
+  padding: 2rem;
+  background-color: #5da9e8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 1rem; }
   .content input {
-    width: 100%;
+    width: 90%;
     height: 3rem;
-    margin-bottom: 2rem; }
-  .content ul li {
-    width: 100%; }
+    margin-bottom: 2rem;
+    border-radius: 0.25rem; }
+  .content ul {
+    margin: 0;
+    width: 90%; }
+    .content ul li {
+      width: 100%; }
 
 span {
   display: block;
   float: right; }
+
+.ninjaForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%; }
+  .ninjaForm input {
+    width: 70%; }
+
+.b-cont {
+  margin-bottom: 2rem; }
 
 /*# sourceMappingURL=main.css.map */
