--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -39,14 +39,23 @@ body {
   }
 }
 .content {
-  width: 90vw;
+  width: 90%;
   margin: 4rem auto;
+  padding: 2rem;
+  background-color: #5da9e8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 1rem;
   input {
-    width: 100%;
+    width: 90%;
     height: 3rem;
     margin-bottom: 2rem;
+    border-radius: 0.25rem;
   }
   ul {
+    margin: 0;
+    width: 90%;
     li {
       width: 100%;
     }
@@ -57,3 +66,15 @@ span {
   display: block;
   float: right;
 }
+.ninjaForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+    input {
+      width: 70%;
+    }
+}
+ .b-cont{
+   margin-bottom: 2rem;
+ }
