--- a/views/directory.html
+++ b/views/directory.html
@@ -1,6 +1,8 @@
 <div class="content">
+  <div class="b-cont">
     <button ng-click="order = 'name'">Order by Name</button>
     <button ng-click="order = 'belt'">Order by Belt</button>
+  </div>
     <input type="text" ng-model="search" placeholder="Search for a ninja">
     <ul>
       <li ng-repeat="ninja in ninjas | orderBy: order | filter: search" ng-show="ninja.available">
@@ -13,7 +15,7 @@
         </h3>
       </li>
     </ul>
-    <form ng-submit="addNinja()">
+    <form  class="ninjaForm" ng-submit="addNinja()">
       <input type="text" placeholder="name" ng-model="newNinja.name" />
       <input type="text" placeholder="belt" ng-model="newNinja.belt" />
       <input type="text" placeholder="rate" ng-model="newNinja.rate" />
