--- a/css/main.css
+++ b/css/main.css
@@ -118,4 +118,12 @@ span {
 .b-cont {
   margin-bottom: 2rem; }
 
+img {
+  display: block;
+  border-radius: 50%;
+  width: 4.8rem;
+  height: 4.8rem;
+  margin: 0;
+  float: left; }
+
 /*# sourceMappingURL=main.css.map */
