--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -78,3 +78,11 @@ span {
  .b-cont{
    margin-bottom: 2rem;
  }
+ img {
+   display: block;
+   border-radius: 50%;
+   width: 4.8rem;
+   height: 4.8rem;
+   margin: 0;
+   float: left;
+ }
