--- a/views/directory.html
+++ b/views/directory.html
@@ -6,6 +6,8 @@
     <input type="text" ng-model="search" placeholder="Search for a ninja">
     <ul>
       <li ng-repeat="ninja in ninjas | orderBy: order | filter: search" ng-show="ninja.available">
+        <img ng-src="{{ninja.thumb}}"
+             ng-show="ninja.thumb"/>
         <h3>{{ninja.name}} - {{ninja.rate | currency}}
 
         <span class="belt" style="background: {{ninja.belt}}">{{ninja.belt}} belt</span>
