--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,6 @@
 <div class="content">
   <h1>Homepage</h1>
-  <random-ninja ninjas="ninjas" title="'Random Ninja'"></random-ninja>
+  <random-ninja ninjas="ninjas" title="'Random Ninja'">
+    <p>Check out our ninja!</p>
+  </random-ninja>
 </div>
